[package]
name = "chakracore-examples"
version = "0.3.0"
edition = "2021"
rust-version = "1.92.0"
license = "MIT"
authors = ["Namhyeon Go <gnh1201@catswords.re.kr>"]
keywords = [
  "chakracore",
  "jsrt",
  "javascript",
  "ffi",
  "bindings",
  "industrial",
  "embedded"
]
publish = false

[dependencies]
chakracore = { path = "../chakracore", version = "0.3.0" }

[[bin]]
name = "hello_world"
path = "src/bin/hello_world.rs"

[[bin]]
name = "multiply"
path = "src/bin/multiply.rs"
